test/error/syn/noAssign.tig
let
    var n  0
    var f := 1
    var i := 2
in
    printf(n)
end
